# fractal-computation

./: Cargo.toml  LICENSE
mandelbrot/: Cargo.toml
mandelbrot/examples/: tile.rs
mandelbrot/src/: cpu.rs  lib.rs
src/: compute.wgsl  cpu.rs  gpu.rs  main.rs  ui.rs
ui/: Cargo.toml  README.md  index.html  rust-toolchain.toml
ui/.cargo/: config.toml
ui/src/: app.rs  fractal_set.rs  main.rs  threads.rs  tiles.rs
web/: Cargo.toml  index.html
web/src/: app.rs  egui.rs  main.rs  tiles.rs
web/src/components/: gui.rs
