[package]
name = "ui"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = { version = "1.0.0", features = ["color"] }
log = "0.4.22"
wasm_thread = "0.3.0"
egui = "0.33.3"
eframe = { version = "0.33.0", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
    "persistence",
    "wayland",
    "x11",
] }
walkers = { git = "https://github.com/w1ltshire/walkers.git" }
env_logger = "0.11.9"
wasm-bindgen-futures = "0.4.58"
web-sys = "0.3.85"
mandelbrot = { path = "../mandelbrot" }
image = "0.25.9"
lru = "0.16.3"
kanal = "0.1.1"
egui-async = "0.3.4"