[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version="0.22", features=["csr"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
tracing-web = "0.1"
mandelbrot = { path = "../mandelbrot" }
web-sys = { version = "0.3", features = ["HtmlCanvasElement"] }
image = "0.25.9"
js-sys = "0.3.85"
plotters = "0.3.7"
plotters-canvas = "0.3.1"
chrono = "0.4.43"
yew-hooks = "0.4.2"
wasmworker = "0.2.1"
eframe = { version = "0.33.3", features = ["default"] }
egui = "0.33.3"
wasm-bindgen = "0.2.108"
wasm-bindgen-futures = "0.4.58"
walkers = "0.52.0"
lru = "0.16.3"